# SnakeGame

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Game/: CMakeLists.txt  GameStatus.h  SnakeDirection.h  SnakeGame.cpp  SnakeGame.h  SnakeGameVisualiser.cpp  SnakeGameVisualiser.h  Utils.cpp  Utils.h
